--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       </button>
       <!-- <div class="level">Press any key to Start</div> -->
     </div>
+    <div class="prev"></div>
     <div class="simon">
       <button class="Box w"></button>
       <button class="Box a"></button>
