--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:title" content="Simon Game" />
+
+    <meta
+      name="description"
+      content="This game is the online version of the Simon electronic game with its circular design and its 4 big illuminated buttons: red, green, blue and yellow. Each key is linked to an electronic sound which will help the player to memorize the series of illuminated keys."
+    />
+    <meta
+      property="og:description"
+      content="This game is the online version of the Simon electronic game with its circular design and its 4 big illuminated buttons: red, green, blue and yellow. Each key is linked to an electronic sound which will help the player to memorize the series of illuminated keys."
+    />
+
+    <meta
+      property="og:image"
+      content="https://www.linkpicture.com/q/Screenshot-2023-04-22-163535.png"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="620" />
+    <meta property="og:image:height" content="620" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
